--- a/package.json
+++ b/package.json
@@ -1,11 +1,14 @@
 {
-  "name": "com.engine.tools.linescurvessplines",
+  "name": "com.omniengine.tools.linescurvessplines",
   "displayName": "Engine Tools - Lines, Curves, & Splines",
   "description": "Editor tools for creating lines, curves, and splines. Used for creating patrolling paths, line renderers, and anything that would require splines. Data can be exported and serialized.",
   "version": "1.0.0",
   "unity": "2021.3",
   "unityRelease": "1f1",
+  "repository": {
+    "url": "https://github.com/ryanunitydeveloper/enginetools-linescurvessplines.git",
+    "type": "git"
+  },
   "dependencies": {
-    
   }
 }
