--- a/package.json
+++ b/package.json
@@ -5,6 +5,11 @@
   "version": "1.0.0",
   "unity": "2021.3",
   "unityRelease": "1f1",
+  "author": {
+    "name": "Ryan IO",
+    "email": "ryan@ryandeveloper.io",
+    "url": "ryandeveloper.io"
+  },
   "repository": {
     "url": "https://github.com/ryanunitydeveloper/enginetools-linescurvessplines.git",
     "type": "git"
